--- a/ToyProject/src/main/resources/application.properties
+++ b/ToyProject/src/main/resources/application.properties
@@ -8,17 +8,15 @@ spring.datasource.password=1234
 #spring.datasource.initializtion-mode=always
 
 #mybatis
-#mybatis.type-aliases-package=com.phoenix.mvc.service.domain,com.phoenix.mvc.common
-#mybatis.type-aliases-package=com.nara.service.domain
 mybatis.mapper-locations=mybatis/mapper/*.xml
 
 
 #Controller return prefix, suffix
-#spring.mvc.view.prefix=/templates/jsp/**/
-#spring.mvc.view.suffix=.jsp
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
 
 #spring.mvc.static-path-pattern=/**
-#spring.resources.static-locations=classpath:/static/,/ckeditor/
+#spring.resources.static-locations=classpath:/static/
 #spring.resources.add-mappings=true 
 
 server.port=8080
