--- a/ToyProject/src/main/resources/application.properties
+++ b/ToyProject/src/main/resources/application.properties
@@ -1,8 +1,13 @@
-#oracl
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.jdbcUrl=jdbc:oracle:thin:@localhost:1521/xe
-spring.datasource.username=TP
-spring.datasource.password=1234
+#Encoding UTF-8
+# spring.http.encoding.charset=UTF-8
+# spring.http.encoding.enabled=true
+# spring.http.encoding.force=true
+
+#MySQL
+spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/TP?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.hikari.username=TP
+spring.datasource.hikari.password=1234
 
 #어플리케이션 구동시마다 스키마 초기화
 #spring.datasource.initializtion-mode=always
@@ -10,14 +15,13 @@ spring.datasource.password=1234
 #mybatis
 mybatis.mapper-locations=mybatis/mapper/*.xml
 
-
 #Controller return prefix, suffix
-spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 #spring.mvc.static-path-pattern=/**
-#spring.resources.static-locations=classpath:/static/
-#spring.resources.add-mappings=true 
+spring.resources.static-locations=classpath:/static/
+spring.resources.add-mappings=true 
 
 server.port=8080
 server.servlet.context-path=/
