--- a/ToyProject/pom.xml
+++ b/ToyProject/pom.xml
@@ -55,6 +55,13 @@
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
 
+		<!--thymeleaf-->
+
+		<dependency> 
+		<groupId>org.springframework.boot</groupId> 
+		<artifactId>spring-boot-starter-thymeleaf</artifactId> 
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
