--- a/ToyProject/src/main/resources/application.properties
+++ b/ToyProject/src/main/resources/application.properties
@@ -17,7 +17,17 @@ mybatis.mapper-locations=mybatis/mapper/*.xml
 
 #spring.mvc.static-path-pattern=/**
 spring.resources.static-locations=classpath:/static/
-spring.resources.add-mappings=true 
+spring.resources.add-mappings=true
 
 server.port=8080
 server.servlet.context-path=/
+
+
+#JSP와 같이 사용할 경우 뷰 구분을 위해 컨트롤러가 뷰 이름을 반환할때 thymeleaf/ 로 시작하면 타임리프로 처리하도록 view-names 지정 
+spring.thymeleaf.view-names=thymeleaf/*
+spring.thymeleaf.prefix=classpath:templates/
+spring.thymeleaf.suffix=.html
+#thymeleaf를 사용하다 수정 사항이 생길 때 수정을 하면 재시작을 해줘야 한다. 이를 무시하고 브라우저 새로고침시 수정사항 반영을 취해 
+cache=false
+spring.thymeleaf.cache=false spring.thymeleaf.check-template-location=true
+
