--- a/ToyProject/src/main/resources/application.properties
+++ b/ToyProject/src/main/resources/application.properties
@@ -29,5 +29,6 @@ spring.thymeleaf.prefix=classpath:templates/
 spring.thymeleaf.suffix=.html
 #thymeleaf를 사용하다 수정 사항이 생길 때 수정을 하면 재시작을 해줘야 한다. 이를 무시하고 브라우저 새로고침시 수정사항 반영을 취해 
 cache=false
-spring.thymeleaf.cache=false spring.thymeleaf.check-template-location=true
+spring.thymeleaf.cache=false
+spring.thymeleaf.check-template-location=true
 
