--- a/ToyProject/src/main/resources/application.properties
+++ b/ToyProject/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #Encoding UTF-8
-# spring.http.encoding.charset=UTF-8
-# spring.http.encoding.enabled=true
-# spring.http.encoding.force=true
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
 
 #MySQL
 spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -11,6 +11,13 @@ spring.datasource.hikari.password=1234
 
 #어플리케이션 구동시마다 스키마 초기화
 #spring.datasource.initializtion-mode=always
+
+# spring.mvc.view.prefix=/templates/
+# spring.mvc.view.suffix=.html
+spring.thymeleaf.prefix=classpath:templates/
+spring.thymeleaf.suffix=.html
+# spring.thymeleaf.check-template-location=true
+# spring.thymeleaf.mode=HTML5
 
 #mybatis
 mybatis.mapper-locations=mybatis/mapper/*.xml
