--- a/ToyProject/src/main/resources/application.properties
+++ b/ToyProject/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.datasource.hikari.password=1234
 
 # spring.mvc.view.prefix=/templates/
 # spring.mvc.view.suffix=.html
+spring.thymeleaf.view-names=abcde
 spring.thymeleaf.prefix=classpath:templates/
 spring.thymeleaf.suffix=.html
 # spring.thymeleaf.check-template-location=true
