--- a/ToyProject/src/main/resources/application.properties
+++ b/ToyProject/src/main/resources/application.properties
@@ -12,12 +12,10 @@ spring.datasource.hikari.password=1234
 #어플리케이션 구동시마다 스키마 초기화
 #spring.datasource.initializtion-mode=always
 
-# spring.mvc.view.prefix=/templates/
-# spring.mvc.view.suffix=.html
 spring.thymeleaf.prefix=classpath:templates/
 spring.thymeleaf.suffix=.html
-# spring.thymeleaf.check-template-location=true
-# spring.thymeleaf.mode=HTML5
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.mode=HTML5
 
 #mybatis
 mybatis.mapper-locations=mybatis/mapper/*.xml
@@ -26,16 +24,12 @@ mybatis.mapper-locations=mybatis/mapper/*.xml
 spring.resources.static-locations=classpath:/static/
 spring.resources.add-mappings=true
 
-server.port=8080
+server.port=8888
 server.servlet.context-path=/
 
 
-#JSP와 같이 사용할 경우 뷰 구분을 위해 컨트롤러가 뷰 이름을 반환할때 thymeleaf/ 로 시작하면 타임리프로 처리하도록 view-names 지정 
-#spring.thymeleaf.view-names=thymeleaf/*
-#spring.thymeleaf.prefix=classpath:templates/
-#spring.thymeleaf.suffix=.html
-#thymeleaf를 사용하다 수정 사항이 생길 때 수정을 하면 재시작을 해줘야 한다. 이를 무시하고 브라우저 새로고침시 수정사항 반영을 취해 
-cache=false
-spring.thymeleaf.cache=false
-spring.thymeleaf.check-template-location=true
+# #thymeleaf를 사용하다 수정 사항이 생길 때 수정을 하면 재시작을 해줘야 한다. 이를 무시하고 브라우저 새로고침시 수정사항 반영을 취해 
+# cache=false
+# spring.thymeleaf.cache=false
+# spring.thymeleaf.check-template-location=true
 
