--- a/ToyProject/src/main/resources/application.properties
+++ b/ToyProject/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 #Encoding UTF-8
-spring.http.encoding.charset=UTF-8
-spring.http.encoding.enabled=true
-spring.http.encoding.force=true
+# spring.http.encoding.charset=UTF-8
+# spring.http.encoding.enabled=true
+# spring.http.encoding.force=true
 
 #MySQL
-spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/TP?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.hikari.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.hikari.jdbc-url=jdbc:log4jdbc:mysql//localhost:3306/TP?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.hikari.username=TP
 spring.datasource.hikari.password=1234
 
