--- a/ToyProject/src/main/resources/application.properties
+++ b/ToyProject/src/main/resources/application.properties
@@ -14,22 +14,15 @@ spring.datasource.hikari.password=1234
 
 spring.thymeleaf.prefix=classpath:templates/
 spring.thymeleaf.suffix=.html
-spring.thymeleaf.check-template-location=true
-spring.thymeleaf.mode=HTML5
+# spring.thymeleaf.check-template-location=true
+# spring.thymeleaf.mode=HTML5
 
 #mybatis
 mybatis.mapper-locations=mybatis/mapper/*.xml
 
 #spring.mvc.static-path-pattern=/**
 spring.resources.static-locations=classpath:/static/
-spring.resources.add-mappings=true
+spring.resources.add-mappings=true 
 
-server.port=8888
+server.port=8080
 server.servlet.context-path=/
-
-
-# #thymeleaf를 사용하다 수정 사항이 생길 때 수정을 하면 재시작을 해줘야 한다. 이를 무시하고 브라우저 새로고침시 수정사항 반영을 취해 
-# cache=false
-# spring.thymeleaf.cache=false
-# spring.thymeleaf.check-template-location=true
-
