--- a/ToyProject/pom.xml
+++ b/ToyProject/pom.xml
@@ -83,11 +83,11 @@
 			<version>1.13.1</version>
 		</dependency>
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.bgee.log4jdbc-log4j2</groupId>
 			<artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
 			<version>1.16</version>
-		</dependency>
+		</dependency> -->
 
 	</dependencies>
 
