--- a/ToyProject/src/main/resources/application.properties
+++ b/ToyProject/src/main/resources/application.properties
@@ -4,8 +4,10 @@
 # spring.http.encoding.force=true
 
 #MySQL
-spring.datasource.hikari.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.hikari.jdbc-url=jdbc:log4jdbc:mysql//localhost:3306/TP?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/TP?serverTimezone=UTC&characterEncoding=UTF-8
+# spring.datasource.hikari.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+# spring.datasource.hikari.jdbc-url=jdbc:log4jdbc:mysql//localhost:3306/TP?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.hikari.username=TP
 spring.datasource.hikari.password=1234
 
