--- a/ToyProject/pom.xml
+++ b/ToyProject/pom.xml
@@ -69,8 +69,17 @@
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
 
-
-
+	<!-- 시큐리티-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 
 
 	
@@ -91,6 +100,8 @@
 			</exclusions>
 		</dependency>
 	
+
+
 
 
 
