--- a/ToyProject/pom.xml
+++ b/ToyProject/pom.xml
@@ -100,6 +100,12 @@
 			</exclusions>
 		</dependency>
 	
+	
+	<dependency>
+		<groupId>org.springframework.security</groupId>
+		<artifactId>spring-security-taglibs</artifactId>
+	
+	</dependency>
 
 
 
