--- a/ToyProject/pom.xml
+++ b/ToyProject/pom.xml
@@ -104,8 +104,13 @@
 	<dependency>
 		<groupId>org.springframework.security</groupId>
 		<artifactId>spring-security-taglibs</artifactId>
-	
+		<version>5.0.7.RELEASE</version>
 	</dependency>
+<dependency>
+    <groupId>org.thymeleaf.extras</groupId>
+    <artifactId>thymeleaf-extras-springsecurity5</artifactId>
+    <version>3.0.4.RELEASE</version>
+</dependency>
 
 
 
