로컬 사용자 회원가입 처리 및 OAuth 토큰 발습 처리

--- a/ToyProject/src/main/resources/application.properties
+++ b/ToyProject/src/main/resources/application.properties
@@ -4,11 +4,11 @@
 # spring.http.encoding.force=true
 
 #MySQL
-spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/TP?serverTimezone=UTC&characterEncoding=UTF-8
-# spring.datasource.hikari.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-# spring.datasource.hikari.jdbc-url=jdbc:log4jdbc:mysql//localhost:3306/TP?serverTimezone=UTC&characterEncoding=UTF-8
-spring.datasource.hikari.username=TP
+# spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/tp?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.hikari.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.hikari.jdbc-url=jdbc:log4jdbc:mysql://localhost:3306/tp?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.hikari.username=root
 spring.datasource.hikari.password=1234
 
 #어플리케이션 구동시마다 스키마 초기화
@@ -29,8 +29,10 @@ spring.resources.add-mappings=true
 server.port=8080
 server.servlet.context-path=/
 
+naver.client_id=n0ZXne0aHGdn6Qf0OwXK
+naver.redirect_uri=http://localhost:8080/user/naverLoginCallBack.do
 
-# #thymeleaf를 사용하다 수정 사항이 생길 때 수정을 하면 재시작을 해줘야 한다. 이를 무시하고 브라우저 새로고침시 수정사항 반영을 취해 
+# #thymeleaf를 사용하다 수정 사항이 생길 때 수정을 하면 재시작을 해줘야 한다. 이를 무시하고 브라우저 새로고침시 수정사항 반영을 취해
 # cache=false
 # spring.thymeleaf.cache=false
 # spring.thymeleaf.check-template-location=true
